Sector Misalignment ui alignment issue

--- a/src/app/main-modules/work-orders/rf-oc-workorders/category-wise-wo-listing/sector-misalignment/sector-misalignment.component.scss
+++ b/src/app/main-modules/work-orders/rf-oc-workorders/category-wise-wo-listing/sector-misalignment/sector-misalignment.component.scss
@@ -1,47 +1,59 @@
 
 $md-primary: #0070db;
 $color-white: #ffffff;
-.sector-misalignment {
-    height: calc(100% - 23px) !important;
-    max-height: calc(100% - 30px) !important;
-    .sector-header {
-        height: 40px;
-        padding-bottom: 12px;
-        .header-icons {
-            > div {
-               // margin-right: 20px;
-                font-size: 15px;
-                padding: 5px 11px;
-                line-height: 2;
-                width: 36px;
-                height: 36px;
-                border-radius: 20px;
-                margin: 0 7px;
-                color: #B3D4F4;
-                cursor: pointer;
-                span {
-                    font-size: 1.5rem;
-                    color: gray;
-                }
+
+.sector-misalignment-container {
+    height: 99%;
+    min-height: 99%;
+    min-width: 100%;
+    width: 100%;
+    padding: 0px;
+    position: relative;
+    .sector-flex-container {
+        height: 80px !important;
+        .sector-flex-item {
+            font-size: 14px;
+            .sector-title {
+                font-size: 16px;
+                font-family: Lato Bold;
+            }
+            .icon-button {
+                padding: 10px 16px;
+            }
+            .cancel-btn {
+                font-size: 17px;
+                padding-top: 15px;
             }
         }
     }
-    .app-table-ag-grid {
-            width: 100%;
-            height: 93%;
-            padding-top: 1px;
+    .jcp-table-container {
+        height: calc(100% - 80px) !important;
+        max-height: calc(100% - 80px) !important;
+        .ag-theme-material.ag-jcp3 .ag-header {
+            background-color: #D3D5DC;
+        }
+        // .pagination-aggrid {
+        //     bottom: 20px;
+        //     padding-right: 34px;
+        // }
+    }
+        .pagination-aggrid {
+            width: calc(100% - 310px);
+            position: absolute;
+            bottom: 0;
+            height: 50px;
+            bottom: 20px;
+            padding-right: 34px;
+            .labels {
+                font-size: 14px;
+                font-family: Lato Regular;
+            }
+        }
+    .float {
+        position: fixed;
+        bottom: 40px;
+        right: 40px;
+        text-align: center;
+        // box-shadow: 2px 2px 3px #f5f5f5;
     }
 }
-
-// .my-report-flex-container {
-//     height: 80px !important;
-
-//     .my-report-flex-item {
-//         font-size: 14px;
-//     }
-// }
-// .jcp-table-container {
-//     height: calc(100% - 80px) !important;
-//     max-height: calc(100% - 80px) !important;
-    
-// }
